LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Fixed_Term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Term__c</fullName>
    <label>Fixed Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>