LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency__c</fullName>
    <label>Foreign Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>