LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Foreign_Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Exchange_Rate__c</fullName>
    <label>Foreign Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>