LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Housing_loan_Variable_ADL__c.field-meta.xml
<CustomField>
    <fullName>Housing_loan_Variable_ADL__c</fullName>
    <label>Housing loan Variable ADL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>