LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Housing_Loan_Variable_D_L__c.field-meta.xml
<CustomField>
    <fullName>Housing_Loan_Variable_D_L__c</fullName>
    <label>Housing Loan Variable - D/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>