LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Increased_Instalment_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Increased_Instalment_Repayment_Amount__c</fullName>
    <label>Increased Instalment Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>