LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Interest_Charged__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charged__c</fullName>
    <label>Interest Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>