LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Interest_Coverage_Ratio_ICR__c.field-meta.xml
<CustomField>
    <fullName>Interest_Coverage_Ratio_ICR__c</fullName>
    <label>Interest Coverage Ratio (ICR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>