LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Interest_Coverage_Ratio_ICR_t__c.field-meta.xml
<CustomField>
    <fullName>Interest_Coverage_Ratio_ICR_t__c</fullName>
    <label>Interest Coverage Ratio (ICR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>