LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Interest_Only_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Term_Years__c</fullName>
    <label>Interest Only Term (Years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>