LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Interest_Rate_Safety__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Safety__c</fullName>
    <label>Interest Rate Safety</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>