LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Intrest_Rate_on_new_Loan__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Rate_on_new_Loan__c</fullName>
    <label>Intrest Rate on new Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>