LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Lease_Hp_AMP__c.field-meta.xml
<CustomField>
    <fullName>Lease_Hp_AMP__c</fullName>
    <label>Lease / Hp AMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>