LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Lease_HP_D_L__c.field-meta.xml
<CustomField>
    <fullName>Lease_HP_D_L__c</fullName>
    <label>Lease / HP - D/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>