LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Lease_HP_MP__c.field-meta.xml
<CustomField>
    <fullName>Lease_HP_MP__c</fullName>
    <label>Lease / HP - MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>