LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Lease_price__c.field-meta.xml
<CustomField>
    <fullName>Lease_price__c</fullName>
    <label>Lease price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>