LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Living_Expense_Used_of_HPI_or_Actual__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Used_of_HPI_or_Actual__c</fullName>
    <label>Living Expense Used (&gt; of HPI or Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>