LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Living_Expenses_Used__c.field-meta.xml
<CustomField>
    <fullName>Living_Expenses_Used__c</fullName>
    <label>Living Expenses Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>