LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Loan Repayment Option</relationshipLabel>
    <relationshipName>Loan_Repayment_Option</relationshipName>
    <type>Lookup</type>
</CustomField>