LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Loan_App_Fee__c.field-meta.xml
<CustomField>
    <fullName>Loan_App_Fee__c</fullName>
    <label>Loan App Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>