LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Loan_Assesment_Rate_minimum_7__c.field-meta.xml
<CustomField>
    <fullName>Loan_Assesment_Rate_minimum_7__c</fullName>
    <label>Loan Assesment Rate (minimum 7%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>