LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Loan_Period__c.field-meta.xml
<CustomField>
    <fullName>Loan_Period__c</fullName>
    <label>Loan Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>