LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Introductory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>