LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Max_Loan_Avail_Principal_and_Interest__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan_Avail_Principal_and_Interest__c</fullName>
    <label>Max Loan Avail - Principal and Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>