LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Maximum_Loan_Qualification_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loan_Qualification_Amount__c</fullName>
    <label>Maximum Loan Qualification Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>