LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/minus_Existing_Commitment_Sensitivity_2__c.field-meta.xml
<CustomField>
    <fullName>minus_Existing_Commitment_Sensitivity_2__c</fullName>
    <label>minus Existing Commitment Sensitivity(2.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>