LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Monthly_Difference__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Difference__c</fullName>
    <label>Monthly Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>