LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Monthly_lease_fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_lease_fee__c</fullName>
    <label>Monthly lease fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>