LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Monthly_Living_Expenses_AUD__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Living_Expenses_AUD__c</fullName>
    <label>Monthly Living Expenses AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>