LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Monthly_Sales_Tax_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales_Tax_Payment__c</fullName>
    <label>Monthly Sales Tax Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>