LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Net_Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Disposable_Income__c</fullName>
    <label>Net Disposable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>