LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Net_Surplus_Income_NSI__c.field-meta.xml
<CustomField>
    <fullName>Net_Surplus_Income_NSI__c</fullName>
    <label>Net Surplus Income (NSI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>