LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Net_Surplus_Income_NSI_t__c.field-meta.xml
<CustomField>
    <fullName>Net_Surplus_Income_NSI_t__c</fullName>
    <label>Net Surplus Income (NSI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>