LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/New_Loan_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Term_Years__c</fullName>
    <label>New Loan Term(Monthly)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>