LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/New_Monthly_Loan_Repayment_s__c.field-meta.xml
<CustomField>
    <fullName>New_Monthly_Loan_Repayment_s__c</fullName>
    <label>New Monthly Loan Repayment/s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>