LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/NSR_BCS__c.field-meta.xml
<CustomField>
    <fullName>NSR_BCS__c</fullName>
    <label>NSR BCS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>