LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/NSR_BCS_t__c.field-meta.xml
<CustomField>
    <fullName>NSR_BCS_t__c</fullName>
    <label>NSR BCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>