LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Number_of_Dependant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependant__c</fullName>
    <label>Number of Dependant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>