LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance__c</fullName>
    <label>Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>