LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Other_AMP__c.field-meta.xml
<CustomField>
    <fullName>Other_AMP__c</fullName>
    <label>Other AMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>