LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Other_D_L__c.field-meta.xml
<CustomField>
    <fullName>Other_D_L__c</fullName>
    <label>Other -D/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>