LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Other_FCDL__c.field-meta.xml
<CustomField>
    <fullName>Other_FCDL__c</fullName>
    <label>Other FCDL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>