LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Other_Mortage_repayment_2_AC__c.field-meta.xml
<CustomField>
    <fullName>Other_Mortage_repayment_2_AC__c</fullName>
    <label>Other Mortage repayment 2 AC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>