LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Overall_Result__c.field-meta.xml
<CustomField>
    <fullName>Overall_Result__c</fullName>
    <label>Overall Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>