LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Overdraft_FCDL__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_FCDL__c</fullName>
    <label>Overdraft FCDL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>