LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Overdraft_FCMP__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_FCMP__c</fullName>
    <label>Overdraft FCMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>