LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Overdraft_MP__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_MP__c</fullName>
    <label>Overdraft - MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>