LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Personal_loan_Fixed_AMP__c.field-meta.xml
<CustomField>
    <fullName>Personal_loan_Fixed_AMP__c</fullName>
    <label>Personal loan(Fixed) AMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>