LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Personal_loan_Variable_FCMP__c.field-meta.xml
<CustomField>
    <fullName>Personal_loan_Variable_FCMP__c</fullName>
    <label>Personal loan(Variable) FCMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>