LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Personal_Loans_1_AC__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loans_1_AC__c</fullName>
    <label>Personal Loans 1 AC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>