LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Personal_Loans_2_AO__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loans_2_AO__c</fullName>
    <label>Personal Loans 2 AO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>