LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/PNMRI_AA__c.field-meta.xml
<CustomField>
    <fullName>PNMRI_AA__c</fullName>
    <label>PNMRI AA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>