LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/PNMRI_AO__c.field-meta.xml
<CustomField>
    <fullName>PNMRI_AO__c</fullName>
    <label>PNMRI AO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>