LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Pre_Tax_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Monthly_Payment__c</fullName>
    <label>Pre Tax Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>