LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Pre_tax_montlhy_payment__c.field-meta.xml
<CustomField>
    <fullName>Pre_tax_montlhy_payment__c</fullName>
    <label>Pre tax montlhy payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>