LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Present_Value_of_Interest_Saving__c.field-meta.xml
<CustomField>
    <fullName>Present_Value_of_Interest_Saving__c</fullName>
    <label>Present Value of Interest Saving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>