LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Proposed_LVR__c.field-meta.xml
<CustomField>
    <fullName>Proposed_LVR__c</fullName>
    <label>Proposed LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>