LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Rent_Board_FCMP__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_FCMP__c</fullName>
    <label>Rent/Board FCMP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>