LMS/force-app/main/default/objects/Loan_Repayment_Option__c/fields/Rent_Board_MP__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_MP__c</fullName>
    <label>Rent / Board - MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>